2005-06-12  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclsock.c: Removed unused static function.

2005-06-12  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/conn.c:
	* nsd/info.c:
	* nsd/log.c:
	* nsd/queue.c:
	* nsd/tclfile.c:
	* nsd/tclhttp.c:
	* nsd/tclinit.c:
	* nsd/tcljob.c:
	* nsd/tclmisc.c:
	* nsd/tclthread.c
	* nsd/tclvar.c:
	* nsthread/nsthreadtest.c: silencecompiler warnings like
	"dereferencing type-punned pointer will break strict-aliasing rules"

2005-06-11  Vlad Seryakov  <seryakov@users.sf.net>

	nsd/return.c: made warning go away about parentheses around && and ||

2005-06-11  Stephen Deasey  <sdeasey@users.sf.net>

	* include/nscheck: Add new attribute NS_GNUC_SENTINEL which
	ensures that a NULL is passed as the last arg to a varargs
	function.  Also, make sure that the format arg in a printf-like
	function is non-NULL.
	* include/ns.h: Markup up with NS_GNUC_SENTINEL.
	* nsd/urlspace.c:
	* nsd/nslog.c: Say NULL rather than 0 when talking about null pointers.

2005-06-11  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/exec.c:     Fixed various places where log calls
	* nsd/nsmain.c:   were fed with wrong number or wrong 
	* nsd/driver.c:   types of arguments.

	* nsd/nsd.h:      Added wrappers for mem-mapping files in
	* nsd/fastpath.c: platform-neutral way. Only the unix part
	* nsd/unix.c:     is implemented. The Windows part is still
	* nsd/nswin32.c:  left to be done.

2005-06-10  Vlad Seryakov  <seryakov@users.sf.net>

        * nsd/driver.c:
        * nsd/binder.c: Determine path using Ns_PathIsAbsolute for Unix 
	domain sockets

	* nsd/tclresp.c: removed ns_returnbinary command. Added -binary
	flag to ns_return.

2005-06-10  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* include/ns.h Ns_SockBindUdp(), Ns_SockBindRaw() and Ns_SockBindUnix()
	are now exported.

	* nsd/init.c: NsInitBinder is also done for Windows as for Unix.

	* nsd/binder.c: Attempt to unify usage and call-conventions on various 